unpackaged/main/default/objects/ServiceAppointment/fields/DaysInTheFuture__c.field-meta.xml
<CustomField>
    <fullName>DaysInTheFuture__c</fullName>
    <description>Computes the number of days between today and the SchedStartTime</description>
    <formula>DATEVALUE(SchedStartTime) - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DaysInTheFuture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>