unpackaged/main/default/objects/ServiceAppointment/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Account.PersonContact.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>