unpackaged/main/default/objects/ServiceAppointment/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <formula>Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastName</label>
    <type>Text</type>
</CustomField>