unpackaged/main/default/objects/ServiceAppointment/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Customer order number against which the service appointment is scheduled.</description>
    <inlineHelpText>Customer order number against which the service appointment is scheduled.</inlineHelpText>
    <label>Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>