unpackaged/main/default/objects/ServiceAppointment/fields/Scheduled_Start_Date_Melbourne__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start_Date_Melbourne__c</fullName>
    <formula>DATEVALUE( SchedStartTime + 10/24)</formula>
    <label>Scheduled Start Date</label>
    <type>Date</type>
</CustomField>