unpackaged/main/default/objects/ServiceAppointment/fields/Scheduled_Start_Time_Melbourne__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start_Time_Melbourne__c</fullName>
    <formula>TIMEVALUE(SchedStartTime + 10/24)</formula>
    <label>Scheduled Start Time</label>
    <type>Time</type>
</CustomField>