unpackaged/main/default/objects/ServiceAppointment/fields/StartDateTimeTimeZoneSpecific__c.field-meta.xml
<CustomField>
    <fullName>StartDateTimeTimeZoneSpecific__c</fullName>
    <label>StartDateTimeTimeZoneSpecific</label>
    <type>DateTime</type>
</CustomField>