unpackaged/main/default/objects/ServiceAppointment/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>ServiceTerritory.State</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>