unpackaged/main/default/objects/ServiceAppointment/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <label>Store Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>