unpackaged/main/default/objects/ServiceAppointment/fields/Store_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Store_Timezone__c</fullName>
    <formula>ServiceTerritory.TimeZone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Timezone</label>
    <type>Text</type>
</CustomField>