unpackaged/main/default/objects/ServiceAppointment/fields/StoreId__c.field-meta.xml
<CustomField>
    <fullName>StoreId__c</fullName>
    <formula>ServiceTerritory.Store_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StoreId</label>
    <type>Text</type>
</CustomField>