unpackaged/main/default/objects/ServiceAppointment/fields/Update_Appt_Redirect_Email__c.field-meta.xml
<CustomField>
    <fullName>Update_Appt_Redirect_Email__c</fullName>
    <description>UpdateAppointmentRedirectURLForEmails - long text</description>
    <label>Update Appt Redirect Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>