unpackaged/main/default/objects/ServiceAppointment/fields/UpdateAppointmentRedirectURLForEmails__c.field-meta.xml
<CustomField>
    <fullName>UpdateAppointmentRedirectURLForEmails__c</fullName>
    <label>UpdateAppointmentRedirectURLForEmails</label>
    <type>Url</type>
</CustomField>